# tao-os

./: Cargo.toml  Dockerfile  Makefile  README.md  debug.gdb  grub.cfg  linker.ld  test_runner.sh
.cargo/: config
.github/workflows/: build.yml
src/: config.rs  disk.rs  kernel.asm  kernel.rs  status.rs
src/arch/x86_64/: boot.asm  mod.rs
src/arch/x86_64/idt/: idt.asm  mod.rs
src/arch/x86_64/paging/: mod.rs
src/boot/: boot.asm  long-mode.asm  multiboot_header.asm
src/disk/: ata.rs  ata_pio.rs  diskreader.rs  diskstreamer.rs  mod.rs
src/disk/ata_pio/: ata_pio_28.rs  ata_pio_48.rs  mod.rs
src/fs/: fat16.rs  file.rs  mod.rs  pparser.rs
src/fs/fat/: fat16.rs
src/gdt/: mod.rs
src/idt/: idt.asm  idt.rs  mod.rs
src/io/: io.asm  isr.rs  mod.rs  vga.rs
src/memory/: heap.rs
src/memory/heap/: heap.rs  kheap.rs  mod.rs
src/memory/paging/: mod.rs  paging.rs
src/task/: tss.rs
src/tests/: fat16_test.rs  malloc_test.rs  mod.rs  paging_test.rs
src/tests/qemu/: mod.rs  serial_writer.rs
src/utils/: macros.asm
